# vcpkg-test-sdl2-addons

./: .travis.yml  CMakeLists.txt  main.cpp  travis.sh
